--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,12 +14,19 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'dev.frozenmilk.sinister.sloth.load'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
 
     packagingOptions {
         jniLibs.useLegacyPackaging true
+    }
+}
+
+repositories {
+    maven {
+        url = "https://repo.dairy.foundation/releases"
     }
 }
 
@@ -34,6 +41,24 @@ dependencies {
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
-    implementation 'com.acmerobotics.roadrunner:core:0.5.6'
+    implementation ('com.acmerobotics.roadrunner:core:0.5.6') {
+        exclude group: "com.acmerobotics.dashboard"
+    }
 
+    implementation("dev.frozenmilk.sinister:Sloth:0.2.1")
+    implementation("com.acmerobotics.slothboard:dashboard:0.2.1+0.4.16")
+
+
+}
+
+buildscript {
+    repositories {
+        mavenCentral()
+        maven {
+            url "https://repo.dairy.foundation/releases"
+        }
+    }
+    dependencies {
+        classpath "dev.frozenmilk:Load:0.2.1"
+    }
 }
