--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -16,11 +16,13 @@ dependencies {
     implementation 'org.firstinspires.ftc:Hardware:10.1.1'
     implementation 'org.firstinspires.ftc:FtcCommon:10.1.1'
     implementation 'org.firstinspires.ftc:Vision:10.1.1'
-    implementation 'com.pedropathing:pedro:1.0.8'
+    implementation ('com.pedropathing:pedro:1.0.8') {
+        exclude group: "com.acmerobotics.dashboard"
+    }
 
     //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
+    //implementation "com.acmerobotics.dashboard:dashboard:0.4.16"
 }
 
