--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -4,6 +4,7 @@ repositories {
 
     maven { url = 'https://maven.brott.dev/' }
     maven { url= "https://maven.pedropathing.com/" }
+    maven { url = "https://maven.rowanmcalpin.com/" }
 
 }
 
@@ -19,6 +20,9 @@ dependencies {
     implementation ('com.pedropathing:pedro:1.0.8') {
         exclude group: "com.acmerobotics.dashboard"
     }
+
+    implementation 'com.rowanmcalpin.nextftc:core:0.6.1'
+    implementation 'com.rowanmcalpin.nextftc:ftc:0.6.1'
 
     //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.2.0'
